@startuml
'https://plantuml.com/class-diagram
class Vector
class Transformers
class Cristal
class DatosJugador

class ExcepcionControlArchivo {
    + ExcepcionControlArchivo(mensaje : string)
    + ExcepcionControlArchivo()
}

class ControlArchivo {
    - string ruta
    ---
    - Vector<string> dividir_linea(linea : const string&, delimitador : char)
    ---
    + ControlArchivo()
    + ControlArchivo(string ruta)
    + void sobreescribir_en_archivo(Vector<T> vector_guardar)
    + Vector<T> leer_archivo()
}

' Relaciones
ControlArchivo --> Vector : "usa"
ControlArchivo --> Transformers : "usa"
ControlArchivo --> Cristal : "usa"
ControlArchivo --> DatosJugador : "usa"
ControlArchivo ..> ExcepcionControlArchivo : "lanza"
@enduml